# mandalas

./: Cargo.toml  README.md  install.sh
docs/superpowers/plans/: 2026-05-28-mandalas.md
docs/superpowers/specs/: 2026-05-28-mandalas-design.md
src/: app.rs  color.rs  config.rs  controls.rs  lib.rs  main.rs  motion.rs  presets.rs  theme.rs
src/render/: flower.rs  interlace.rs  lotus.rs  mod.rs  sacred.rs  spirograph.rs  star.rs
src/ui/: canvas.rs  footer.rs  header.rs  mod.rs  sidebar.rs
